--- a/modules/ROOT/pages/layers.adoc
+++ b/modules/ROOT/pages/layers.adoc
@@ -13,6 +13,7 @@ Map a node to a layer in the application's properties file, or use the Anypoint 
 === Set a Layer with Properties
 
 To automate the classification of nodes into layers, configure the property `anypoint.platform.visualizer.layer=<name>` in the application's properties file.
+Note that this is an application property, not a server property. 
 
 When this property is used, nodes automatically appear in the specified layer. If the layer doesn't exist it is created.
 
