--- a/modules/ROOT/pages/layers.adoc
+++ b/modules/ROOT/pages/layers.adoc
@@ -13,15 +13,16 @@ Map a node to a layer in the application's properties file, or use the Anypoint 
 === Set a Layer with Properties
 
 To automate the classification of nodes into layers, configure the property `anypoint.platform.visualizer.layer=<name>` in the application's properties file.
-Note that this is an application property, not a server property. 
+[NOTE]
+This is an application property, not a server property. 
 
 When this property is used, nodes automatically appear in the specified layer. If the layer doesn't exist it is created.
 
 [NOTE]
-====
+----
 * For applications deployed to standalone Mule runtime engines, layer names set using runtime properties can contain only alphanumeric characters. Unsupported characters are replaced with an underscore (`_`).
 * You cannot reassign a node layer using the Anypoint Visualizer UI if you assign it using application property file.
-====
+----
 
 == Set a Layer with the Anypoint Visualizer UI
 
