--- a/modules/ROOT/pages/troubleshoot-visualizer.adoc
+++ b/modules/ROOT/pages/troubleshoot-visualizer.adoc
@@ -15,7 +15,7 @@ If you encounter an error or issue while using Visualizer, you can try these sol
 |If you know that you have applications deployed in a supported environment, but are not seeing them on the Visualizer canvas, you may need to update your applications to use the supported Mule version. View a list of xref:setup.adoc[supported Mule runtime engines].
 |Apps aren't appearing (and you aren't getting a specific error message).
 |Visualizer only supports specific Mule versions (runtimes).
-|If you are not seeing some of your applications on the Visualizer canvas or in the services list, check your filters. If the filters are not the issue, you may need to update your applications to use a different Mule version if you want them to appear. View a list of xref:setup.adoc[supported Mule versions]. If you have upgraded to a Mule version released after March 23, 2019, you must xref:monitoring::enable-apps-deployed-to-cloud.adoc[enable monitoring] before the applications and metrics will appear.
+|If you are not seeing some of your applications on the Visualizer canvas or in the services list, check your filters. If the filters are not the issue, you may need to update your applications to use a different Mule version if you want them to appear. View a list of xref:setup.adoc[supported Mule versions]. If you have upgraded to a Mule version 4 released after March 22, 2019, or Mule version 3.9 released after April 5, 2019, you must xref:monitoring::enable-apps-deployed-to-cloud.adoc[enable monitoring] before the applications and metrics will appear.
 |===
 
 == Why can't I see metrics for my applications?
@@ -28,7 +28,7 @@ If you encounter an error or issue while using Visualizer, you can try these sol
 |File a support ticket or contact your Customer Success representative and ask for your account to be enabled.
 |`Metrics aren't available for this app. You may need to update its runtime version.`
 |The application is not using a Mule version that supports Anypoint Monitoring metrics.
-|For CloudHub applications, you must use an `-AM` Mule to support Anypoint Monitoring, or upgrade to a Mule 4 version available after March 23, 2019, and then enable the Monitoring agent. View a list of xref:setup.adoc[supported Mule versions].
+|For CloudHub applications, you must use an `-AM` Mule to support Anypoint Monitoring, or upgrade to a Mule 4 version available after March 22, 2019, or Mule 3.9 version available after April 5, 2019, and then enable the Monitoring agent. View a list of xref:setup.adoc[supported Mule versions].
 |===
 
 == I seem to have permissions issues
