Runtime support change
Quick change for runtimes we support. I missed 3.9.0 for CH before.

--- a/modules/ROOT/pages/setup.adoc
+++ b/modules/ROOT/pages/setup.adoc
@@ -23,7 +23,7 @@ Anypoint Visualizer only includes activity from applications deployed to a suppo
 
 Anypoint Visualizer supports the following Mule versions running on CloudHub:
 
-* Mule version 3.9.1+
+* Mule version 3.9.x
 * Mule version 3.9.1-AM
 * Mule version 4.1.x
 * Mule version 4.1.x-AM
