--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,6 +1,7 @@
 .xref:index.adoc[Anypoint Visualizer]
 * xref:index.adoc[Anypoint Visualizer]
 * xref:setup.adoc[Set up Anypoint Visualizer]
+* xref:visualizer-app-network.adoc[Visualizer Application Network]
 * xref:view.adoc[View Application Information with Anypoint Visualizer]
 * xref:layers.adoc[Use Layers in Anypoint Visualizer]
 * xref:use-tags-in-visualizer.adoc[Use Tags in Anypoint Visualizer]
