--- a/modules/ROOT/pages/visualizer-app-network.adoc
+++ b/modules/ROOT/pages/visualizer-app-network.adoc
@@ -1,4 +1,4 @@
-= View an Application Network
+= Visualizer Application Network
 ifndef::env-site,env-github[]
 include::_attributes.adoc[]
 endif::[]
