--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -2,8 +2,9 @@
 * xref:index.adoc[Anypoint Visualizer]
 * xref:setup.adoc[Set up Anypoint Visualizer]
 * xref:visualizer-app-network.adoc[Visualizer Application Network]
-* xref:view.adoc[View Application Information with Anypoint Visualizer]
-* xref:layers.adoc[Use Layers in Anypoint Visualizer]
-* xref:use-tags-in-visualizer.adoc[Use Tags in Anypoint Visualizer]
+* xref:customize-your-canvas.adoc[Customize Your Canvas]
+ ** xref:view.adoc[Views]
+ ** xref:layers.adoc[Use Layers in Anypoint Visualizer]
+ ** xref:use-tags-in-visualizer.adoc[Use Tags in Anypoint Visualizer]
 * xref:technical.adoc[How Anypoint Visualizer Collects Application Data]
 * xref:troubleshoot-visualizer.adoc[Troubleshoot Visualizer]
