--- a/modules/ROOT/pages/view.adoc
+++ b/modules/ROOT/pages/view.adoc
@@ -3,40 +3,78 @@ ifndef::env-site,env-github[]
 include::_attributes.adoc[]
 endif::[]
 
-Visualizer views enable you to create and save private views and views that you can share with others who have access to the environment that contains the shared views. 
+Views enable Visualizer editors to create and share views across environments with team members. Visualizer viewers each have their own private view that is dynamically updated with views that are shared with them to display the apps and views they have access to. 
+
 
 == Private View
 
-Each Visualizer user has a private view. When you access Visualizer the first time, your private view is displayed. Each subsequent time you access Visualizer, your private view reflects the view you last accessed and saved. 
+When you access Visualizer the first time, your private view is displayed. Each subsequent time you access Visualizer, you are returned to the view you last accessed and saved. Your private view provides a source of truth, where you can see a complete picture of the things you are working on.
 
-Views that you have accessed recently appear under *Recent Items* in the top navigation bar. 
+Views that you have access to appear in a list in the top navigation bar on the right of the view name (click *V* to see the list). This gives you easy access to all the views that are shared with you, which saves you time because you don't need to readjust your filters every time to get the view you need. 
 
 In your private view, you can:
 
-* Edit and save
-* Rename
-* Discard changes
-* Export the view as a PNG
+* Edit and save your private view
+* Rename your private view
+* Discard changes you made to your private view
+* Export your private view as a PNG file
 
 You can't delete or share a private view. 
 
-You can modify public (shared) views, but you can't save the changes you make. 
+You can modify public (shared) views to display information you are interested in, but you can't save the changes you make. 
 
 == Shared Views
 
-Shared views are created and shared (made public) by users with the *Visualizer Editor* permission. Anyone who has permission for the environment can see shared views, but only editors can create, rename, and edit public views. 
+As a Visualizer editor, you can create and share views to provide a consistent, high quality source of truth to your team members. Any user who has permission for the environment can see shared views, but only editors can create, rename, and edit public views. 
 
-It is useful to share views in cases where you want to share the app network graph with team members so they can use it to plan work, study the architecture of the app network, and troubleshoot more easily.
+You can share views to share the app network graph with team members so they can use it to plan work, study the architecture of the app network, and troubleshoot more easily.
 
 == Create a View
 
+Only users with the *Visualizer Editor* permission can create views. 
+
+. In the top navigation bar, on the right of the view name, click *V*.
+. Click *+New*. 
+. In the New view dialog, enter a *Name* for the view, and click *Save*. +
+An asterisk ( * ) appears next to the view name until you click *Save* in the view designer. 
++
+image::visualizer-unsaved-view.png[]
+. Select the environment and business group for the view. 
++
+image::new-view-select.png[]
+. Configure the view by using xref:use-tags-in-visualizer.adoc[tags] and services filters. 
+. Click *Save*. +
+Once you save the view, it becomes public, meaning that any user who has access to the apps in the environment sees the view in their private view view list. 
+
+
 == Edit a View
 
-Rename...
+Users can make changes to their private views, and save them, however, only users with the *Visualizer Editor* permission can edit public views. The steps are the same in either case. 
+
+. Make your changes to the Visualizer canvas. 
+. Click *Save*. 
+. (Visual editor only) Click *Save as* to save the updated view as a new view while retaining the original view. 
++
+image::visualizer-save-as-new.png[]
+
+== Rename a View
+
+Users can rename their private view, but only users with *Visualizer Editor* permission can rename public views. 
+
+. Click the drop-down arrow next to *Save*, and select *Rename*. 
++
+image::visualizer-rename-view.png[]
+. In the Rename view dialog, enter a new *Name*, and click *Save*. 
+
+
 
 == Share a View
 
+Only users with the *Visualizer Editor* permission can share views.
+
 == Delete a View
+
+Only users with the *Visualizer Editor* permission can delete views.
 
 
 
