--- a/modules/ROOT/pages/view.adoc
+++ b/modules/ROOT/pages/view.adoc
@@ -10,7 +10,7 @@ Views enable Visualizer editors to create and share views across environments wi
 
 When you access Visualizer the first time, your private view is displayed. Each subsequent time you access Visualizer, you are returned to the view you last accessed and saved. Your private view provides a source of truth, where you can see a complete picture of the things you are working on.
 
-Views that you have access to appear in a list in the top navigation bar on the right of the view name (click *V* to see the list). This gives you easy access to all the views that are shared with you, which saves you time because you don't need to readjust your filters every time to get the view you need. 
+Views that you have access to appear in a list in the top navigation bar on the right of the view name (click the drop-down arrow *V* to see the list). This gives you easy access to all the views that are shared with you, which saves you time because you don't need to readjust your filters every time to get the view you need. 
 
 In your private view, you can:
 
@@ -41,7 +41,7 @@ An asterisk ( * ) appears next to the view name until you click *Save* in the vi
 image::visualizer-unsaved-view.png[]
 . Select the environment and business group for the view. 
 +
-image::new-view-select.png[]
+image::new-view-select-env.png[]
 . Configure the view by using xref:use-tags-in-visualizer.adoc[tags] and services filters. 
 . Click *Save*. +
 Once you save the view, it becomes public, meaning that any user who has access to the apps in the environment sees the view in their private view view list. 
@@ -55,7 +55,7 @@ Users can make changes to their private views, and save them, however, only user
 . Click *Save*. 
 . (Visual editor only) Click *Save as* to save the updated view as a new view while retaining the original view. 
 +
-image::visualizer-save-as-new.png[]
+image::visualizer-save-as-new-view.png[]
 
 == Rename a View
 
