--- a/modules/ROOT/pages/view.adoc
+++ b/modules/ROOT/pages/view.adoc
@@ -3,54 +3,60 @@ ifndef::env-site,env-github[]
 include::_attributes.adoc[]
 endif::[]
 
-Views enable Visualizer editors to create and share views across environments with team members. Visualizer viewers each have their own private view that is dynamically updated with views that are shared with them to display the apps and views they have access to. 
+Visualizer editors can create auto-discoverable views that are accessible to their team members across environments.  
 
+Views display your saved filter selection, including:
+
+* Selected environments 
+* Selected tags
+* Selected nodes in the list of services
+* Selected services
+* New services deployed that match the selected environments and tags
+* If the *Show dependents and dependencies* option is selected and the service is related to a selected service 
+
+Views that you have access to appear in a list in the top navigation bar on the right of the view name (click the drop-down arrow to see the list). This gives you easy access to all the views that are available to you, and saves you time because you don't need to readjust filters every time you access Visualizer to get the view that is relevant to you. 
 
 == Private View
 
-When you access Visualizer the first time, your private view is displayed. Each subsequent time you access Visualizer, you are returned to the view you last accessed and saved. Your private view provides a source of truth, where you can see a complete picture of the things you are working on.
-
-Views that you have access to appear in a list in the top navigation bar on the right of the view name (click the drop-down arrow *V* to see the list). This gives you easy access to all the views that are shared with you, which saves you time because you don't need to readjust your filters every time to get the view you need. 
-
+When you access Visualizer the first time, your private view is displayed. Each subsequent time you access Visualizer, you are returned to the view you last accessed. Your private view includes something views, providing a complete picture of the projects to which you have access.  
 In your private view, you can:
 
-* Edit and save your private view
+* See a list of all the views to which you have access
+* Edit and save which apps are included in your private view
 * Rename your private view
 * Discard changes you made to your private view
 * Export your private view as a PNG file
 
-You can't delete or share a private view. 
+You can't delete a private view. 
 
-You can modify public (shared) views to display information you are interested in, but you can't save the changes you make. 
+== Something Views
 
-== Shared Views
+As a Visualizer editor, you can create views that provide a consistent, high quality source of truth for the architecture of each of your organization's projects. Any Visualizer user who has permission for the included environments can see these auto-discoverable views in a drop-down list in the side panel. Only editors can create, rename, and edit public views. 
 
-As a Visualizer editor, you can create and share views to provide a consistent, high quality source of truth to your team members. Any user who has permission for the environment can see shared views, but only editors can create, rename, and edit public views. 
+These views provide team members with a topological view of the apps that are specific to the areas they are responsible for. Providing a dynamic view for team members ensures their ability to troubleshoot their projects more quickly and easily.  
 
-You can share views to provide team members app network graphs that are specific to the areas they are responsible for. This helps team members plan their work and understand the architecture of the app network that contains the apps they have access to. Providing a dynamic view for team members ensures their ability to troubleshoot the app network more quickly and easily.  
+== Create a something View
 
-== Create a View
+Only users with the *Visualizer Editor* permission can create something views. 
 
-Only users with the *Visualizer Editor* permission can create views. 
-
-. In the top navigation bar, on the right of the view name, click *V*.
+. In the top navigation bar, on the right of the view name, click the drop-down arrow.
 . Click *+New*. 
-. In the New view dialog, enter a *Name* for the view, and click *Save*. +
-An asterisk appears next to the view name until you click *Save* in the view designer. 
-+
-image::visualizer-unsaved-view.png[]
-. Select the environment and business group for the view. 
-+
-image::new-view-select-env.png[]
-. Configure the view by using xref:use-tags-in-visualizer.adoc[tags] and services filters. 
-. Click *Save*. +
-Once you save the view, it becomes public, meaning that any user who has access to the apps in the environment sees the view in their private view view list. 
+. In the *New view* dialog, enter a *Name* for the view, and click *Save*. +
+This creates a view based on the selections of the view you were in.  
+. Configure the view by selecting which environments, xref:use-tags-in-visualizer.adoc[tags], and services to include. 
+. Click *Save*. 
+. You can also create a new view by selecting *Save as* from the drop-down menu to save your updates as a new view and preserve the original view.
+
+When you save a view, it saves both your *Production* and *Sandbox* configurations.
+
+Once you save the view, it becomes accessible to other users, meaning that any user who has access to the apps in the environment sees the view in their list of views. 
 
 == Edit a View
 
-Users can make changes to their private views, and save them, however, only users with the *Visualizer Editor* permission can edit public views. The steps are the same in either case. 
+Users can make changes to their private view's filters, and save them. However, only users with the *Visualizer Editor* permission can edit something views. 
 
-. Make your changes to the Visualizer canvas. 
+. Make your changes to the Visualizer canvas. +
+An asterisk appears next to the view name until you click *Save* in the side panel. 
 . Click *Save*. 
 . (Visualizer editor only) Click *Save as* to save your updates as a new view and preserve the original view. 
 +
@@ -58,17 +64,16 @@ image::visualizer-save-as-new-view.png[]
 
 == Rename a View
 
-Users can rename their private view, but only users with *Visualizer Editor* permission can rename public views. 
+Users can rename their private view, but only users with *Visualizer Editor* permission can rename something views. 
 
 . Click the drop-down arrow next to *Save*, and select *Rename*. 
 +
 image::visualizer-rename-view.png[]
 . In the *Rename view* dialog, enter a new *Name*, and click *Save*. 
 
-
 == Share a View
 
-Only users with the *Visualizer Editor* permission can share views. Sharing is automatic in the sense that when a new view is created and saved, it is visible in the view list of users who have access to the environment and apps in the view. 
+Sharing a view is automatic in the sense that when a new view is created and saved, it is visible in the view list of users who have access to the environment and apps in the view. 
 
 You can also click *Copy* next to the shareable link and send it to the user you want to share the view with. 
 +
