--- a/modules/ROOT/pages/technical.adoc
+++ b/modules/ROOT/pages/technical.adoc
@@ -3,7 +3,7 @@ ifndef::env-site,env-github[]
 include::_attributes.adoc[]
 endif::[]
 
-Anypoint Visualizer collects runtime information from running applications, APIs, and proxies to detect all of its dependencies. The information collected includes IP address and URL (without parameters) of the incoming request, as well as URL (without parameters), and some header values of outgoing requests. This information is encrypted and stored in a database.
+Anypoint Visualizer collects runtime information from running applications, APIs, and proxies to detect all of its dependencies. The information collected includes IP and URL (without parameters) of the incoming request, as well as URL (without parameters), and some header values of outgoing requests. This information is stored encrypted in a database.
 
 [%header%autowidth.spread]
 |===
@@ -36,7 +36,7 @@ To reduce any potential impact on performance for an application running in Clou
 
 To reduce any potential impact on performance for an application running in CloudHub, disable the Monitoring agent:
 
-. Verify that you are a user with *Anypoint Monitoring User* permission.
+. Verify that you are a user with *Anypiont Monitoring User* permission.
 . Sign in to Anypoint Platform and click *Anypoint Monitoring*.
 . Click *Settings*.
 . Select *CloudHub*.
@@ -46,9 +46,7 @@ To reduce any potential impact on performance for an application running in Clou
 
 === Reduce Potential Performance Impact for Standalone Mule
 
-Visualizer requires an additional header injection to work properly. To reduce potential performance impact for an app running in a standalone Mule 4.1.x, the header injection is disabled by default. You must enable the header injection at the server (not application) level. Reducing potential performance impact for an application running in a standalone Mule must be done at the server level. 
-
-You can do one of the following:
+Reducing potential performance impact for an application running in a standalone Mule must be done at the server level. You can do one of the following:
 
 * Deploy the application to a server without the Anypoint Monitoring agent installed.
 * Disable data collection for a specific server. To disable data collection for a server and all the applications deployed to that server, set the following property at the server level (not application level):
