--- a/modules/ROOT/pages/customize-your-canvas.adoc
+++ b/modules/ROOT/pages/customize-your-canvas.adoc
@@ -24,6 +24,6 @@ For more information, see xref:use-tags-in-visualizer.adoc[Use Tags in Visualize
 
 == Views
 
-Visualizer editors define views based on filtered environments and tags. These views are auto discoverable and available to all Visualizer users who have permission for the included environments. 
+Visualizer editors define views based on filtered environments and tags. These defined views are auto discoverable and available to all Visualizer users who have permission for the included environments. 
 
 For more information, see xref:view.adoc[Visualizer Views]
