--- a/modules/ROOT/pages/use-tags-in-visualizer.adoc
+++ b/modules/ROOT/pages/use-tags-in-visualizer.adoc
@@ -6,7 +6,7 @@ endif::[]
 You can add tags to an API, application, proxy, or other service. Similar to layers, there are two ways of assigning a tag to a node--by using properties, or through the Runtime Manager UI.
 
 [NOTE]
-If a tag is assigned to an application, the application will appear in every defined view in which the tags are selected. 
+If a tag is assigned to an application, the application will appear in every view in which the tags are selected. 
 
 == Setting the Tag Through Properties
 
